# feature: 신규 기능 및 유지보수 건     # bug: 버그 수정     # etc: 기타 변경 feat : 요일연재 탭 슬라이드 추가 요일연재 탭까지 추가하고 header z-index 등 수정해서 스크롤 시 자연스럽게 변경

--- a/public/stylesheets/contents.css
+++ b/public/stylesheets/contents.css
@@ -1,8 +1,13 @@
 
 .page{
+    display: none;
     margin: 0px auto;
     width:720px;
     margin-top: 10px;
+}
+
+.visible{
+    display: block;
 }
 
 .invisible{
@@ -10,6 +15,7 @@
 }
 
 .mySlides {display: none;}
+.daySlides {display: none;}
 img {vertical-align: middle;}
 
 /* Slideshow container */
@@ -21,22 +27,44 @@ img {vertical-align: middle;}
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
+  color: #ffffff;
+  font-size: 35px;
+  margin-left : 20px;
   position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+  bottom: 100px;
+  width: 50%;
+  text-align: left;
+}
+
+.subtext{
+  color: #ffffff;
+  font-size: 22px;
+  margin-left : 20px;
+  position: absolute;
+  bottom: 60px;
+  width: 50%;
+  text-align: left;
+}
+
+.explain{
+    position: absolute;
+    font-size: 20px;
+    bottom: 0;
+    width:100%;
+    height: 45px;
+    text-align: center;
+    line-height: 2.2;
+    background-color:rgb(255, 217, 0);
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
+  font-size: 21px;
+  padding: 10px 15px;
   position: absolute;
-  top: 0;
+  right: 0;
+  bottom: 47px;
 }
 
 /* The dots/bullets/indicators */
